Partially corrected a missing file path bug

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -29,7 +29,7 @@ __BU_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_D
 __BU_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")"	# Bash Utils development tools translation files folder |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
 
 # "lib" folder's content.
-__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "$(ModuleInitializer_GetModuleName)")"	# Bash Utils library module's directory		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils library module's directory		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "lang")"									# Bash Utils translations files directory	|   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
 
 # -----------------------------------------------
@@ -47,7 +47,7 @@ __BU_MAIN_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR
 __BU_MAIN_LIB_FILE_INITIALIZER_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_MODULES_DIR" "Initializer.sh")"	# Module's initializer file.
 
 # Bash Utils translations path.
-__BU_MAIN_TRANSLATION_FILE_PATH="$__BU_MAIN_LIB_LANG_DIR_PATH/lang.csv"   # Bash Utils translations file.
+__BU_MAIN_TRANSLATION_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_LANG_DIR_PATH" "lang.csv")"			# Bash Utils translations file.
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
