Finally corrected this missing file path bug

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -29,8 +29,9 @@ __BU_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_D
 __BU_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")"	# Bash Utils development tools translation files folder |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
 
 # "lib" folder's content.
-__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils library module's directory		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
-__BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "lang")"									# Bash Utils translations files directory	|   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
+__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "functions")"					# Bash Utils functions directory			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_LIB_MOD_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_FUNCTS_DIR_PATH" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"			# Bash Utils library module's directory	|	Default parent folder --> "$__BU_MAIN_LIB_FUNCTS_DIR_PATH/"
+__BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "lang")"						# Bash Utils translations files directory	|   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
 
 # -----------------------------------------------
 
@@ -38,8 +39,8 @@ __BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PA
 
 # "config" folder's content.
 __BU_MAIN_CONF_COLORS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Colors.conf")"			# Bash Utils color encoding variables configuration file.
-__BU_MAIN_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "projectInit.conf")"			# Project's initialization variables.
-__BU_MAIN_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "ProjectStatus.conf")"		# Bash Utils status variables configuration file.
+__BU_MAIN_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Init.conf")"				# Project's initialization variables.
+__BU_MAIN_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Status.conf")"			# Bash Utils status variables configuration file.
 __BU_MAIN_CONF_TEXT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Text.conf")"				# Bash Utils text variables configuration file.
 __BU_MAIN_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Time.conf")"				# Bash Utils time variables configuration file.
 
@@ -51,7 +52,7 @@ __BU_MAIN_TRANSLATION_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_LA
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
-__BU_MAIN_FUNCTIONS_FILES_PATH=("$__BU_MAIN_LIB_FUNCTS_DIR_PATH/"*.lib )
+__BU_MAIN_FUNCTIONS_FILES_PATH=("$__BU_MAIN_LIB_MOD_DIR_PATH/"*.lib)
 
 # -----------------------------------------------
 
