--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -21,7 +21,7 @@ function CheckTextColor()
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
 
-			echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH"; return 0
+			echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH" || { HandleSmallErrors 'E' "The $(DechoHighlight "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") file doesn't exists" 'E' "CPLS"; }; return 0
         else
             echo -ne "\e[38;5;$1m"; return 0
         fi
