--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -30,10 +30,18 @@ __BU_MAIN_STAT_ECHO="false"
 
 # Project's error handling
 
-# This variable accepts "fatal" or nothing as value.
+# This variable only accepts "fatal" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_ERROR=""
+
+
+# Project's initialization status checker.
+
+# This variable only accepts "true" or "false" as values.
+# Default value : "true" (since the project is initialized first).
+# shellcheck disable=SC2034
+__BU_MAIN_STAT_INITIALIZING="true"
 
 
 # Project's main log file informations
@@ -46,7 +54,7 @@ __BU_MAIN_STAT_LOG="true"
 
 # Project's main log file redirections status
 
-# This variable accepts "log", "tee" or nothing as value.
+# This variable only accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_LOG_REDIRECT=""
@@ -54,7 +62,7 @@ __BU_MAIN_STAT_LOG_REDIRECT=""
 
 # Project's authorization to operate at the root directory or one of its sub-folders
 
-# This variable accepts "authorized", "forbidden" or "restricted" as values.
+# This variable only accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security).
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
@@ -62,7 +70,7 @@ __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
 # Project initialization's messages displaying.
 
-# This variable accepts "true" or "false" as values.
+# This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_PRINT_INIT_LOG="true"
@@ -70,7 +78,7 @@ __BU_MAIN_STAT_PRINT_INIT_LOG="true"
 
 # Project's messages display time
 
-# This variable accepts any integer of floating number.
+# This variable only accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_TIME_TXT=".5"
@@ -78,7 +86,7 @@ __BU_MAIN_STAT_TIME_TXT=".5"
 
 # Project's translation checker.
 
-# This variable accepts "true" or "false" as value.
+# This variable only accepts "true" or "false" as value.
 # Default value : "false" (since the whole project's texts are not yet translated)
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_TRANSLATED="false"
@@ -86,7 +94,7 @@ __BU_MAIN_STAT_TRANSLATED="false"
 
 # Project's handling text formatting
 
-# This variable accepts "true" or "false" as value.
+# This variable only accepts "true" or "false" as value.
 # Default value : "true"
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_TXT_FMT="true"
