Added a tput alternative for terminal columns and lines number checking

--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -6,10 +6,13 @@
 
 #### TEXT PROCESSING
 
-## COLUMNS
+## COLUMNS AND LINES
 
-# Get the columns number on the terminal according to its window's lenght
-__BU_MAIN_TXT_COLS="$(tput cols)"
+# Get the columns number on the terminal according to its window's length.
+__BU_MAIN_TXT_COLS="$(tput cols || stty size | cut -d " " -f2)"
+
+# Get the lines number on the terminal according to its window's height.
+__BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)"
 
 # -----------------------------------------------
 
