Corrected a small display bug in the CheckSTAT.lib file, and globally disabled a Shellcheck warning in the main module's configuration files

--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -1,5 +1,8 @@
 #!/usr/bin/env bash
 
+# Disabling the SC2034 warning from Shellcheck (SC2034: <Variable name> appears unused. Verify use (or export if used externally)), because of the huge number of variables declared in the configuration files, but only used in the library files.
+# shellcheck disable=SC2034
+
 # ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; #
 
 ######################################## DEFINING VARIABLES #######################################
@@ -8,10 +11,10 @@
 
 ## GETTING THE DATE
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
-__BU_MAIN_TIME_DATE=$(date +"%Y-%m-%d %Hh-%Mm-%Ss")
+__BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %Hh-%Mm-%Ss")"
 
 # -----------------------------------------------
 
 ## PRINTING THE DATE
 # Displaying the current date YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second) with a colored text (for a better view in the log file).
-__BU_MAIN_TIME_DATE_DISPLAY=$(printf "$(tput setaf 78)[ $(tput setaf 111)$__BU_MAIN_TIME_DATE $(tput setaf 78) ]$(tput sgr0)")
+__BU_MAIN_TIME_DATE_DISPLAY=$(printf "%s [ %s%s%s ]%s" "$(tput setaf 78)" "$(tput setaf 111)" "$__BU_MAIN_TIME_DATE" "$(tput setaf 78)" "$(tput sgr0)")
