--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -1,5 +1,8 @@
 #!/usr/bin/env bash
 
+# Disabling the SC2034 warning from Shellcheck (SC2034: <Variable name> appears unused. Verify use (or export if used externally)), because of the huge number of variables declared in the configuration files, but only used in the library files.
+# shellcheck disable=SC2034
+
 # These status variable can be changed anywhere in the main script, except for the following variables :
 #   - __BU_MAIN_STAT_DEBUG      -> This variable is used as (...).
 
