--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -12,7 +12,7 @@
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_DEBUG="false"
+__BU_MAIN_STAT_DEBUG="true"
 
 
 # "CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
