--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -66,7 +66,7 @@ __BU_MAIN_STAT_LOG_REDIRECT=""
 # Project's authorization to operate at the root directory or one of its sub-folders
 
 # This variable only accepts "authorized", "forbidden" or "restricted" as values.
-# Default value : "forbidden" (by security).
+# Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "ChangeSTAT_OPERATE_ROOT()" function).
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
