--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -42,7 +42,7 @@ __BU_MAIN_STAT_ERROR=""
 # Project's initialization status checker.
 
 # This variable only accepts "true" or "false" as values.
-# Default value : "true" (since the project is initialized first).
+# Default value : "true" (don't change thsi value here, since the project MUST be initialized first).
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_INITIALIZING="true"
 
