Added boolean status variables checkings

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -6,6 +6,8 @@
 # These status variable can be changed anywhere in the main script, except for the following variables :
 #   - __BU_MAIN_STAT_DEBUG      -> This variable is used as (...).
 
+# Their values are checked in the "CheckSTAT.lib" file, located in the "Bash-utils/lib/functions/main" directory, with the "CheckSTAT_" functions (CV = Correct Value).
+
 
 # Project's debug variable
 
@@ -71,12 +73,12 @@ __BU_MAIN_STAT_LOG_REDIRECT=""
 __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
 
-# Project initialization's messages displaying.
+# Project initialization's messages displaying on terminal.
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_PRINT_INIT_LOG="true"
+__BU_MAIN_STAT_PRINT_INIT_LOG="false"
 
 
 # Project's messages display time
