--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -78,7 +78,7 @@ __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_PRINT_INIT_LOG="false"
+__BU_MAIN_STAT_PRINT_INIT_LOG="true"
 
 
 # Project's messages display time
