Added failsafes to the main module's initialization process

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -14,7 +14,31 @@
 # For a better environment integration, it is highly advised to store the path in a file
 # in the user's home directory, and to call the "cat" command to display its value.
 
-__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path")"
+__BU_MAIN_ROOT_DIR_PATH__="$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path"
+
+if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
+	__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH__")"
+
+elif [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
+	echo "WARNING !"; echo
+
+	echo "The Bash Utils's root folder's path storage file exists in the << $__BU_MAIN_ROOT_DIR_PATH__ >>, but is empty."; echo
+	echo "Please write the path of the library's root folder inside this file, manually or with the installer file."; echo
+
+	echo "Aborting the library's initialization."; echo
+
+	exit 1
+
+elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
+	echo "ERROR !"; echo
+
+	echo "The Bash Utils's root folder's path storage file doesn't exists in the << $__BU_MODULE_UTILS_ROOT >> folder."; echo
+	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file."; echo
+
+	echo "Aborting the library's initialization."; echo
+
+	exit 1
+fi
 
 # Bash Utils sub-folders paths.
 __BU_MAIN_MODULE_BIN_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "bin")"				# Bash Utils binary files folder            |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
@@ -24,7 +48,7 @@ __BU_MAIN_MODULE_LIB_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR
 __BU_MAIN_MODULE_RES_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")"				# Bash Utils resources directory            |   Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 
 # Bash Utils dev-tools paths.
-__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_RES_DIR_PATH" "dev-tools")"			# Bash Utils development tools root directory          |	Default parent folder --> "$__BU_MAIN_MODULE_RES_DIR_PATH/"
+__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_RES_DIR_PATH" "dev-tools")"			# Bash Utils development tools root directory          	|	Default parent folder --> "$__BU_MAIN_MODULE_RES_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")"				# Bash Utils development tools binary files folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")"			# Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-img")"				# Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
@@ -43,8 +67,8 @@ __BU_MAIN_MODULE_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MOD
 # "config" folder's content.
 __BU_MAIN_MODULE_CONF_COLORS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Colors.conf")"			# Bash Utils color encoding variables configuration file.
 __BU_MAIN_MODULE_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Project.conf")"			# Project's initialization variables.
-__BU_MAIN_MODULE_CONF_LANG_ISO_CODE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "LangISOCode.conf")"		# Project's language code, overriding the language detection.
-__BU_MAIN_MODULE_CONF_LANG_CSV_CODE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "LangCSVCode.conf")"		# Project's translation CSV file language row code
+__BU_MAIN_MODULE_CONF_LANG_ISO_CODE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "LangISOCode.conf")"	# Project's language code, overriding the language detection.
+__BU_MAIN_MODULE_CONF_LANG_CSV_CODE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "LangCSVCode.conf")"	# Project's translation CSV file language row code
 __BU_MAIN_MODULE_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Status.conf")"			# Bash Utils status variables configuration file.
 __BU_MAIN_MODULE_CONF_TEXT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Text.conf")"				# Bash Utils text variables configuration file.
 __BU_MAIN_MODULE_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Time.conf")"				# Bash Utils time variables configuration file.
