Commit before correcting the log date displaying

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -20,7 +20,7 @@ __BU_MAIN_STAT_DEBUG="true"
 # "CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
 
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
-# Default value : "forbid"
+# Default value : "forbid" (to avoid bugs during the program's initialization)
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_DECHO="forbid"
 
