Changed somes status variables

--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -17,12 +17,7 @@ __BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %Hh-%Mm-%Ss")"
 
 ## PRINTING THE DATE
 # Displaying the current date YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second) with a colored text (for a better view in the log file).
-v_time_conf_date_display_color_1="78"
-v_time_conf_date_display_color_2="111"
-v_time_conf_date_display_color_3="78"
+__BU_MAIN_TIME_DATE_DISPLAY=$(printf "%s[ %s%s%s ]%s" "$(tput setaf 78)" "$(tput setaf 111)" "$__BU_MAIN_TIME_DATE" "$(tput setaf 78)" "$(tput sgr0)")
 
-__BU_MAIN_TIME_DATE_DISPLAY=$(printf "\e[38;5;%sm[ \e[38;5;%sm%s\e[38;5;%sm ]\e[38;5;0m" \
-    "$(tput setaf "$v_time_conf_date_display_color_1")" \
-    "$(tput setaf "$v_time_conf_date_display_color_2")" \
-    "$__BU_MAIN_TIME_DATE" \
-    "$(tput setaf "$v_time_conf_date_display_color_3")")
+
+# __BU_MAIN_TIME_DATE_DISPLAY="$(echo "$(tput setaf 78) [ $(tput setaf 111) $__BU_MAIN_TIME_DATE $(tput setaf 78) ]" $(tput sgr0))"
