--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -20,7 +20,7 @@ __BU_MAIN_STAT_DEBUG="true"
 # "CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
 
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
-# Default value : "forbid"
+# Default value : "forbid" (to avoid bugs during the program's initialization)
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_DECHO="forbid"
 
@@ -28,23 +28,23 @@ __BU_MAIN_STAT_DECHO="forbid"
 # "CheckProjectLogPath()" function's authorization to call an "Echo<...>()" function in case of need.
 
 # This variable only accepts "true" or "false" as values.
-# Default value : "false"
+# Default value : "true" (to avoid bugs during the initialization processus)
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_ECHO="false"
+__BU_MAIN_STAT_ECHO="true"
 
 
 # Project's error handling
 
 # This variable only accepts "fatal" or nothing as value.
-# Default value : "" (no value)
+# Default value : "fatal" (to avoid leaving bugs during the program's initialization)
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_ERROR=""
+__BU_MAIN_STAT_ERROR="fatal"
 
 
 # Project's initialization status checker.
 
 # This variable only accepts "true" or "false" as values.
-# Default value : "true" (don't change thsi value here, since the project MUST be initialized first).
+# Default value : "true" (DON'T change thsi value here, since the project MUST be initialized first).
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_INITIALIZING="true"
 
@@ -102,7 +102,7 @@ __BU_MAIN_STAT_TRANSLATED="false"
 # This variable only accepts "true" or "false" as value.
 # Default value : "true"
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TXT_FMT="true"
+__BU_MAIN_STAT_TXT_FMT="false"
 
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
