Added some errors informations and removed a '> /dev/null' that didn't allowed messages to print during the configuration files' sourcing

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -20,7 +20,7 @@ if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; t
 	__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH__")"
 
 elif [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
-	echo "WARNING !"; echo
+	echo; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> WARNING !"; echo
 
 	echo "The Bash Utils's root folder's path storage file exists in the << $__BU_MAIN_ROOT_DIR_PATH__ >>, but is empty."; echo
 	echo "Please write the path of the library's root folder inside this file, manually or with the installer file."; echo
@@ -30,7 +30,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH__" 
 	exit 1
 
 elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
-	echo "ERROR !"; echo
+	echo; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> ERROR !"; echo
 
 	echo "The Bash Utils's root folder's path storage file doesn't exists in the << $__BU_MODULE_UTILS_ROOT >> folder."; echo
 	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file."; echo
