Corrected an infinite loop after the main module's successful loading

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -28,7 +28,7 @@ __BU_MAIN_STAT_DECHO="forbid"
 # "CheckProjectLogPath()" function's authorization to call an "Echo<...>()" function in case of need.
 
 # This variable only accepts "true" or "false" as values.
-# Default value : "true" (to avoid bugs during the initialization processus)
+# Default value : "true" (to avoid bugs and infinite loops during the initialization processus)
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_ECHO="true"
 
