Added STDERR redirections and a missing library's root folder's path help message

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -16,26 +16,41 @@
 
 __BU_MAIN_ROOT_DIR_PATH__="$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path"
 
+# Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
 if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
 	__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH__")"
 
+	# Checking if the library's root folder path written in this file is valid.
+	if [ ! -d "$__BU_MAIN_ROOT_DIR_PATH" ]; then
+		echo >&2; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> ERROR !" >&2; echo >&2
+
+		echo "The Bash Utils library's root folder's path written in the << $__BU_MAIN_ROOT_DIR_PATH__ >> file was not found in your hard drive." >&2; echo >&2
+		echo "Please check the path recorded in this file for typos if you typed it by yourself, or verify where you've stored this root folder." >&2; echo >&2
+
+		echo "Aborting the library's initialization." >&2; echo >&2
+
+		exit 1
+	fi
+
+# Checking if the "Bash-utils-root-val.path" exists AND if this file is empty (no library's path specified).
 elif [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
-	echo; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> WARNING !"; echo
+	echo >&2; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> WARNING !" >&2; echo >&2
 
-	echo "The Bash Utils's root folder's path storage file exists in the << $__BU_MAIN_ROOT_DIR_PATH__ >>, but is empty."; echo
-	echo "Please write the path of the library's root folder inside this file, manually or with the installer file."; echo
+	echo "The Bash Utils's root folder's path storage file exists in the << $__BU_MAIN_ROOT_DIR_PATH__ >>, but is empty." >&2; echo >&2
+	echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
-	echo "Aborting the library's initialization."; echo
+	echo "Aborting the library's initialization." >&2; echo >&2
 
 	exit 1
 
+# Handling the absence of the "Bash-utils-root-val.path" file.
 elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
-	echo; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> ERROR !"; echo
+	echo >&2; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> ERROR !" >&2; echo >&2
 
-	echo "The Bash Utils's root folder's path storage file doesn't exists in the << $__BU_MODULE_UTILS_ROOT >> folder."; echo
-	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file."; echo
+	echo "The Bash Utils's root folder's path storage file doesn't exists in the << $__BU_MODULE_UTILS_ROOT >> folder." >&2; echo >&2
+	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
-	echo "Aborting the library's initialization."; echo
+	echo "Aborting the library's initialization." >&2; echo >&2
 
 	exit 1
 fi
