Trying to correct an exit command bug

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -23,8 +23,21 @@ function CheckTextColor()
 	if CheckTextFormat; then
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
+                
+#            if ! CheckProjectRelatedFile "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME" "f"; then
+ #               HandleSmallErrors 'E' "Unable to create the $(Decho "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") file" 'E' 'CPLS'
+  #          fi
+            
+            echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH";
+            [ "$?" -ne 0 ] && {
+                echo -e >&2; echo -e "The $(CheckFilePathExists "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") (color.tmp) file doesn't exists" >&2; echo -e >&2;
 
-			echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH" || { echo -e; echo -e "The $__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH file doesn't exists"; echo -e; exit 1; }; return 0
+                exit 1
+                
+                kill "$$"
+
+#               return 0
+                }
         else
             echo -ne "\e[38;5;$1m"; return 0
         fi
