--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,7 +17,7 @@ function GetProjectFilePath()
 {
     local v_project_file="$0"
     local v_cut="${v_project_file##*./}"
-    local find_path; # find_path="$(find "$(cd ..; pwd)" -name "$v_cut")"
+    local find_path
         find_path="$(ModuleInitializer_FindPath "$(cd ..; pwd)" "$v_cut")"
 
     echo "$find_path"
