Added a shell interpreter failsafe and redecored the Parameters, Variables and Code functions' categories to fit with the 'local p_/v_' keyword

--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -3,12 +3,12 @@
 # Debug function that displays function and file name.
 function debug()
 {
-	#***** Parameters *****
+	#**** Parameters ****
 	p_function=$1
 	p_file=$2
 	p_line=$3
 
-	#***** Code *****
+	#**** Code ****
 	if [ "$__BU_MAIN_STAT_DEBUG" = 'true' ]; then
 		echo -ne "$__BU_MAIN_COLOR_PINK"
 
