--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -16,10 +16,10 @@
 # Writing the color code into a file, to be processed by any function which needs to know what is the current text color.
 function CheckTextColor()
 {
-	#***** Parameters *****
+	#**** Parameters ****
 	# $1 --> Color code
 
-	#***** Code *****
+	#**** Code ****
 	if CheckTextFormat; then
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
