Added French guillemets closing quotes

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -34,7 +34,7 @@ if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; t
 	if [ ! -d "$__BU_MAIN_ROOT_DIR_PATH" ]; then
 		echo >&2; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> ERROR !" >&2; echo >&2
 
-		echo "The Bash Utils library's root folder's path written in the « $__BU_MAIN_ROOT_DIR_PATH__ >> file was not found in your hard drive." >&2; echo >&2
+		echo "The Bash Utils library's root folder's path written in the « $__BU_MAIN_ROOT_DIR_PATH__ » file was not found in your hard drive." >&2; echo >&2
 		echo "Please check the path recorded in this file for typos if you typed it by yourself, or verify where you've stored this root folder." >&2; echo >&2
 
 		echo "Aborting the library's initialization." >&2; echo >&2
@@ -46,7 +46,7 @@ if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; t
 elif [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
 	echo >&2; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> WARNING !" >&2; echo >&2
 
-	echo "The Bash Utils's root folder's path storage file exists in the « $__BU_MAIN_ROOT_DIR_PATH__ >>, but is empty." >&2; echo >&2
+	echo "The Bash Utils's root folder's path storage file exists in the « $__BU_MAIN_ROOT_DIR_PATH__ », but is empty." >&2; echo >&2
 	echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
 	echo "Aborting the library's initialization." >&2; echo >&2
@@ -57,7 +57,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH__" 
 elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
 	echo >&2; echo "IN ${BASH_SOURCE[0]}, LINE $LINENO --> ERROR !" >&2; echo >&2
 
-	echo "The Bash Utils's root folder's path storage file doesn't exists in the « $__BU_MODULE_UTILS_ROOT >> folder." >&2; echo >&2
+	echo "The Bash Utils's root folder's path storage file doesn't exists in the « $__BU_MODULE_UTILS_ROOT » folder." >&2; echo >&2
 	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
 	echo "Aborting the library's initialization." >&2; echo >&2
