--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -54,56 +54,74 @@ function CheckTextColor()
 
 #### COLOR ENCODING
 
-## COLOR CODES FOR ENCODING
+## COLOR CODES FOR ENCODING (SYSTEM)
 __BU_MAIN_COLOR_CODE_BLACK='0'
-__BU_MAIN_COLOR_CODE_BLUE='4'
+__BU_MAIN_COLOR_CODE_MAROON='1'
+__BU_MAIN_COLOR_CODE_GREEN='2'
+__BU_MAIN_COLOR_CODE_OLIVE='3'
+__BU_MAIN_COLOR_CODE_NAVY='4'
+__BU_MAIN_COLOR_CODE_PURPLE='5'
 __BU_MAIN_COLOR_CODE_CYAN='6'
-__BU_MAIN_COLOR_CODE_GRAY="244"
-__BU_MAIN_COLOR_CODE_GREEN='82'
+__BU_MAIN_COLOR_CODE_SILVER='7'
+__BU_MAIN_COLOR_CODE_GRAY="8"
+__BU_MAIN_COLOR_CODE_RED='9'
+__BU_MAIN_COLOR_CODE_LIME='10'
+__BU_MAIN_COLOR_CODE_YELLOW='11'
+__BU_MAIN_COLOR_CODE_BLUE='12'
+__BU_MAIN_COLOR_CODE_FUSCHIA='13'
+__BU_MAIN_COLOR_CODE_AQUA='14'
+__BU_MAIN_COLOR_CODE_WHITE='15'
+
+# -----------------------------------------------
+
+## COLOR CODES FOR ENCODING (OTHERS)
 __BU_MAIN_COLOR_CODE_ORANGE='166'
 __BU_MAIN_COLOR_CODE_PINK='200'
-__BU_MAIN_COLOR_CODE_PURPLE='165'
-__BU_MAIN_COLOR_CODE_RED='196'
 __BU_MAIN_COLOR_CODE_TURQUOISE='51'
-__BU_MAIN_COLOR_CODE_WHITE='15'
-__BU_MAIN_COLOR_CODE_YELLOW='226'
 
 # -----------------------------------------------
 
 ## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
 
-# Error text display color				| Default color : "196"	(red)
-__BU_MAIN_COLOR_CODE_ERROR="$(CheckTextColor "196")"
+# Error text display color				| Default color : Red
+__BU_MAIN_COLOR_CODE_ERROR="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_RED")"
 
-# Highlighted text display color		| Default color : "6"	(cyan)
-__BU_MAIN_COLOR_CODE_HIGHLIGHT="$(CheckTextColor "6")"
+# Highlighted text display color		| Default color : Cyan
+__BU_MAIN_COLOR_CODE_HIGHLIGHT="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_CYAN")"
 
-# Newstep text display color            | Default color : "166" (orange)
-__BU_MAIN_COLOR_NEWSTEP="$(CheckTextColor "166")"
+# Newstep text display color            | Default color : Orange
+__BU_MAIN_COLOR_NEWSTEP="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_ORANGE")"
 
 # Reset color to terminal's default text color | Always "tput sgr0"
 __BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"
 
-# Success text display color			| Default color : "82"	(green)
-__BU_MAIN_COLOR_CODE_SUCCESS="$(CheckTextColor "82")"
+# Success text display color			| Default color : Green
+__BU_MAIN_COLOR_CODE_SUCCESS="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_GREEN")"
 
-# Warning text display color			| Default color : "226"	(yellow)
-__BU_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "226")"
+# Warning text display color			| Default color : Yellow
+__BU_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_YELLOW")"
 
 # -----------------------------------------------
 
 ## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
+__BU_MAIN_COLOR_AQUA="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_AQUA")"
 __BU_MAIN_COLOR_BLACK="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_BLACK")"     # Black
 __BU_MAIN_COLOR_BLUE="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_BLUE")"      # Deep blue
 __BU_MAIN_COLOR_CYAN="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_CYAN")"      # Cyan blue
+__BU_MAIN_COLOR_FUSCHIA="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_FUSCHIA")"	# Fuschia
 __BU_MAIN_COLOR_GRAY="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_GRAY")"      # Gray
 __BU_MAIN_COLOR_GREEN="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_GREEN")"     # Light green
+__BU_MAIN_COLOR_LIME="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_LIME")"		# Lime green
+__BU_MAIN_COLOR_MARRON="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_MAROON")"	# Brown
+__BU_MAIN_COLOR_NAVY="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_NAVY")"		# Navy blue
+__BU_MAIN_COLOR_OLIVE="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_OLIVE")"		# Green olive
 __BU_MAIN_COLOR_ORANGE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_ORANGE")"   	# Orange
 __BU_MAIN_COLOR_PINK="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_PINK")"      # Pink
 __BU_MAIN_COLOR_PURPLE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_PURPLE")"	# Purple
 __BU_MAIN_COLOR_RED="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_RED")"	 	# Light red
+__BU_MAIN_COLOR_SILVER="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_SILVER")"	# Silver
 __BU_MAIN_COLOR_TURQUOISE="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_TURQUOISE")"	# Turquoise
 __BU_MAIN_COLOR_WHITE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_WHITE")"     # White
 __BU_MAIN_COLOR_YELLOW="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_YELLOW")"	# Light yellow
