--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -61,7 +61,7 @@ __BU_MAIN_COLOR_CODE_GREEN='2'
 __BU_MAIN_COLOR_CODE_OLIVE='3'
 __BU_MAIN_COLOR_CODE_NAVY='4'
 __BU_MAIN_COLOR_CODE_PURPLE='5'
-__BU_MAIN_COLOR_CODE_CYAN='6'
+__BU_MAIN_COLOR_CODE_TEAL='6'
 __BU_MAIN_COLOR_CODE_SILVER='7'
 __BU_MAIN_COLOR_CODE_GRAY="8"
 __BU_MAIN_COLOR_CODE_RED='9'
@@ -75,6 +75,7 @@ __BU_MAIN_COLOR_CODE_WHITE='15'
 # -----------------------------------------------
 
 ## COLOR CODES FOR ENCODING (OTHERS)
+__BU_MAIN_COLOR_CODE_CYAN='51'
 __BU_MAIN_COLOR_CODE_ORANGE='166'
 __BU_MAIN_COLOR_CODE_PINK='200'
 __BU_MAIN_COLOR_CODE_TURQUOISE='51'
@@ -122,6 +123,7 @@ __BU_MAIN_COLOR_PINK="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_PINK")"      # P
 __BU_MAIN_COLOR_PURPLE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_PURPLE")"	# Purple
 __BU_MAIN_COLOR_RED="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_RED")"	 	# Light red
 __BU_MAIN_COLOR_SILVER="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_SILVER")"	# Silver
+__BU_MAIN_COLOR_TEAL="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_TEAL")"		# Teal
 __BU_MAIN_COLOR_TURQUOISE="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_TURQUOISE")"	# Turquoise
 __BU_MAIN_COLOR_WHITE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_WHITE")"     # White
 __BU_MAIN_COLOR_YELLOW="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_YELLOW")"	# Light yellow
