--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -107,27 +107,35 @@ __BU_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_YELLOW")"
 ## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
-__BU_MAIN_COLOR_AQUA="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_AQUA")"
+__BU_MAIN_COLOR_AQUA="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_AQUA")"		# Aqua
 __BU_MAIN_COLOR_BLACK="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_BLACK")"     # Black
 __BU_MAIN_COLOR_BLUE="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_BLUE")"      # Deep blue
+
 __BU_MAIN_COLOR_CYAN="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_CYAN")"      # Cyan blue
 __BU_MAIN_COLOR_FUSCHIA="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_FUSCHIA")"	# Fuschia
 __BU_MAIN_COLOR_GRAY="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_GRAY")"      # Gray
+
 __BU_MAIN_COLOR_GREEN="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_GREEN")"     # Light green
 __BU_MAIN_COLOR_LIME="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_LIME")"		# Lime green
 __BU_MAIN_COLOR_MARRON="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_MAROON")"	# Brown
+
 __BU_MAIN_COLOR_NAVY="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_NAVY")"		# Navy blue
 __BU_MAIN_COLOR_OLIVE="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_OLIVE")"		# Green olive
 __BU_MAIN_COLOR_ORANGE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_ORANGE")"   	# Orange
+
 __BU_MAIN_COLOR_PINK="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_PINK")"      # Pink
 __BU_MAIN_COLOR_PURPLE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_PURPLE")"	# Purple
 __BU_MAIN_COLOR_RED="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_RED")"	 	# Light red
+
 __BU_MAIN_COLOR_SILVER="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_SILVER")"	# Silver
 __BU_MAIN_COLOR_TEAL="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_TEAL")"		# Teal
 __BU_MAIN_COLOR_TURQUOISE="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_TURQUOISE")"	# Turquoise
+
 __BU_MAIN_COLOR_WHITE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_WHITE")"     # White
 __BU_MAIN_COLOR_YELLOW="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_YELLOW")"	# Light yellow
 
+
+# Specific colors encoding.
 __BU_MAIN_COLOR_ERROR="$__BU_MAIN_COLOR_CODE_ERROR"							# Error text display color
 __BU_MAIN_COLOR_HIGHLIGHT="$__BU_MAIN_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
 __BU_MAIN_COLOR_RESET="$__BU_MAIN_COLOR_CODE_RESET"							# Reset color to terminal's default text color
