Corrected a bug that made the modules initializer to not detect correctly the 'main' module, and discovered that the bug which displayed 'command not found' when sourcing the Case.lib file was not corrected

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -107,7 +107,7 @@ __BU_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_YELLOW")"
 ## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
-__BU_MAIN_COLOR_AQUA="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_AQUA")"		# Aqua
+__BU_MAIN_COLOR_AQUA="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_AQUA")"		# Aqua blue
 __BU_MAIN_COLOR_BLACK="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_BLACK")"     # Black
 __BU_MAIN_COLOR_BLUE="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_BLUE")"      # Deep blue
 
