Trying to fix the bug that doesn't displays the project's file path

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -15,12 +15,21 @@ __BU_MAIN_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')        # Name of the p
 
 function GetProjectFilePath()
 {
-    local v_project_file="$0"
-    local v_cut="${v_project_file##*./}"
+    local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}"
     local find_path
         find_path="$(ModuleInitializer_FindPath "$(cd ..; pwd)" "$v_cut")"
 
     echo "$find_path"
+
+	echo "--------------------
+	
+	
+	
+	
+	-----------------------------------------
+"
+
+	exit 1
 }
 
 __BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME="tmp"
