Fixed a bug where the path stored in the ModuleInitializer_SourcingFailure() function wasn't displaying

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -21,13 +21,7 @@ function GetProjectFilePath()
 
     echo "$find_path"
 
-	echo "--------------------
-	
-	
-	
-	
-	-----------------------------------------
-"
+	echo "THE find_path VARIABLE IS CORRECTLY SET"
 
 	exit 1
 }
